--- a/vignettes/CreatingAnalysisSpecification.Rmd
+++ b/vignettes/CreatingAnalysisSpecification.Rmd
@@ -97,7 +97,7 @@ cohortGeneratorModuleSpecifications <- createCohortGeneratorModuleSpecifications
   generateStats = TRUE)
 ```
 
-## CohortDiagnostics Module Setttings
+## CohortDiagnostics Module Settings
 
 The following code creates the `cohortDiagnosticsModuleSpecifications` to run cohort diagnostics on the cohorts in the study.
 
@@ -116,12 +116,12 @@ cohortDiagnosticsModuleSpecifications <- createCohortDiagnosticsModuleSpecificat
   incremental = FALSE)
 ```
 
-## CohortIncidence Module Setttings
+## CohortIncidence Module Settings
 
 The following code creates the `cohortIncidenceModuleSpecifications` to perform an incidence rate analysis for the target cohorts and outcome in this study.
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/CohortIncidenceModule/v0.0.4/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CohortIncidenceModule/v0.0.5/SettingsFunctions.R")
 library(CohortIncidence)
 targets <- list(createCohortRef(id=1, name="Celecoxib"),
                 createCohortRef(id=2, name="Diclofenac"),
@@ -144,7 +144,7 @@ irDesign <- createIncidenceDesign(targetDefs = targets,
                                   tars=tars,
                                   analysisList = list(analysis1),
                                   strataSettings = createStrataSettings(
-                                    byYear = TRUE, 
+                                    byYear = TRUE,
                                     byGender = TRUE))
 
 cohortIncidenceModuleSpecifications <- createCohortIncidenceModuleSpecifications(
@@ -152,7 +152,42 @@ cohortIncidenceModuleSpecifications <- createCohortIncidenceModuleSpecifications
 )
 ```
 
-## CohortMethod Module Setttings
+## Characterization Module Settings
+
+The following code creates the `characterizationModuleSpecifications` to perform an characterization analysis for the target cohorts and outcome in this study.
+
+
+```{r eval=FALSE}
+source("https://raw.githubusercontent.com/OHDSI/CharacterizationModule/v0.0.1/SettingsFunctions.R")
+characterizationModuleSpecifications <- createCharacterizationModuleSpecifications(targetIds = c(1,2),
+                                                                                   outcomeIds = 3,
+                                                                                   covariateSettings =
+                                                                                     FeatureExtraction::createCovariateSettings(
+                                                                                       useDemographicsAge = T,
+                                                                                       useDemographicsAgeGroup = T,
+                                                                                       useDemographicsGender = T,
+                                                                                       useDemographicsRace = T,
+                                                                                       useDemographicsEthnicity = T,
+                                                                                       useDemographicsIndexYear = T,
+                                                                                       useDemographicsIndexMonth = T,
+                                                                                       useDemographicsPriorObservationTime = T,
+                                                                                       useDemographicsPostObservationTime = T,
+                                                                                       useDemographicsTimeInCohort = T,
+                                                                                       useConditionGroupEraLongTerm  = T,
+                                                                                       useDrugGroupEraLongTerm = T,
+                                                                                       useProcedureOccurrenceLongTerm = T,
+                                                                                       longTermStartDays = -365,
+                                                                                       endDays = 0),
+                                                                                   dechallengeStopInterval = 30,
+                                                                                   dechallengeEvaluationWindow = 30,
+                                                                                   riskWindowStart = 1,
+                                                                                   startAnchor = "cohort start",
+                                                                                   riskWindowEnd = 0,
+                                                                                   endAnchor = "cohort end")
+```
+
+
+## CohortMethod Module Settings
 
 The following code creates the `cohortMethodModuleSpecifications` to perform a comparative cohort analysis for this study.
 
@@ -160,10 +195,10 @@ The following code creates the `cohortMethodModuleSpecifications` to perform a c
 library(CohortMethod)
 source("https://raw.githubusercontent.com/OHDSI/CohortMethodModule/v0.0.4/SettingsFunctions.R")
 negativeControlOutcomes <- lapply(
-  X = ncoCohortSet$cohortId, 
-  FUN = createOutcome, 
-  outcomeOfInterest = FALSE, 
-  trueEffectSize = 1, 
+  X = ncoCohortSet$cohortId,
+  FUN = createOutcome,
+  outcomeOfInterest = FALSE,
+  trueEffectSize = 1,
   priorOutcomeLookback = 30
 )
 
@@ -178,13 +213,13 @@ outcomes <- append(
   outcomesOfInterest
 )
 
-tcos1 <- createTargetComparatorOutcomes(
+tcos1 <- CohortMethod::createTargetComparatorOutcomes(
   targetId = 1,
   comparatorId = 2,
   outcomes = outcomes,
   excludedCovariateConceptIds = c(1118084, 1124300)
 )
-tcos2 <- createTargetComparatorOutcomes(
+tcos2 <- CohortMethod::createTargetComparatorOutcomes(
   targetId = 4,
   comparatorId = 5,
   outcomes = outcomes,
@@ -193,9 +228,9 @@ tcos2 <- createTargetComparatorOutcomes(
 
 targetComparatorOutcomesList <- list(tcos1, tcos2)
 
-covarSettings <- createDefaultCovariateSettings(addDescendantsToExclude = TRUE)
+covarSettings <- FeatureExtraction::createDefaultCovariateSettings(addDescendantsToExclude = TRUE)
 
-getDbCmDataArgs <- createGetDbCohortMethodDataArgs(
+getDbCmDataArgs <- CohortMethod::createGetDbCohortMethodDataArgs(
   washoutPeriod = 183,
   firstExposureOnly = TRUE,
   removeDuplicateSubjects = "remove all",
@@ -203,7 +238,7 @@ getDbCmDataArgs <- createGetDbCohortMethodDataArgs(
   covariateSettings = covarSettings
 )
 
-createStudyPopArgs <- createCreateStudyPopulationArgs(
+createStudyPopArgs <- CohortMethod::createCreateStudyPopulationArgs(
   minDaysAtRisk = 1,
   riskWindowStart = 0,
   startAnchor = "cohort start",
@@ -221,7 +256,7 @@ computeSharedCovBalArgs <- CohortMethod::createComputeCovariateBalanceArgs()
 computeCovBalArgs <- CohortMethod::createComputeCovariateBalanceArgs(
   covariateFilter = FeatureExtraction::getDefaultTable1Specifications())
 
-cmAnalysis1 <- createCmAnalysis(
+cmAnalysis1 <- CohortMethod::createCmAnalysis(
   analysisId = 1,
   description = "No matching, simple outcome model",
   getDbCohortMethodDataArgs = getDbCmDataArgs,
@@ -229,7 +264,7 @@ cmAnalysis1 <- createCmAnalysis(
   fitOutcomeModelArgs = fitOutcomeModelArgs
 )
 
-cmAnalysis2 <- createCmAnalysis(
+cmAnalysis2 <- CohortMethod::createCmAnalysis(
   analysisId = 2,
   description = "Matching on ps and covariates, simple outcomeModel",
   getDbCohortMethodDataArgs = getDbCmDataArgs,
@@ -254,6 +289,168 @@ cohortMethodModuleSpecifications <- createCohortMethodModuleSpecifications(
 ```
 
 
+## SelfControlledCaseSeries Module Settings
+
+The following code creates the `cohortMethodModuleSpecifications` to perform a comparative cohort analysis for this study.
+
+```{r eval=FALSE}
+library(SelfControlledCaseSeries)
+source(url = "https://raw.githubusercontent.com/OHDSI/SelfControlledCaseSeriesModule/v0.0.2/SettingsFunctions.R")
+
+# Exposures-outcomes -----------------------------------------------------------
+negativeControlOutcomeIds <- ncoCohortSet$cohortId
+outcomeOfInterestIds <- c(3)
+exposureOfInterestIds <- c(1,2)
+
+exposuresOutcomeList <- list()
+for (exposureOfInterestId in exposureOfInterestIds) {
+  for (outcomeOfInterestId in outcomeOfInterestIds) {
+    exposuresOutcomeList[[length(exposuresOutcomeList) + 1]] <- createExposuresOutcome(
+      outcomeId = outcomeOfInterestId,
+      exposures = list(createExposure(exposureId = exposureOfInterestId))
+    )
+  }
+  for (negativeControlOutcomeId in negativeControlOutcomeIds) {
+    exposuresOutcomeList[[length(exposuresOutcomeList) + 1]] <- createExposuresOutcome(
+      outcomeId = negativeControlOutcomeId,
+      exposures = list(createExposure(exposureId = exposureOfInterestId, trueEffectSize = 1))
+    )
+  }
+}
+
+# Analysis settings ------------------------------------------------------------
+getDbSccsDataArgs <- SelfControlledCaseSeries::createGetDbSccsDataArgs(
+  studyStartDate = "",
+  studyEndDate = "20191130",
+  maxCasesPerOutcome = 1e6,
+  useNestingCohort = TRUE,
+  nestingCohortId = 1,
+  deleteCovariatesSmallCount = 0
+)
+
+createStudyPopulation6AndOlderArgs <- SelfControlledCaseSeries::createCreateStudyPopulationArgs(
+  minAge = 18,
+  naivePeriod = 365
+)
+
+covarPreExp <- SelfControlledCaseSeries::createEraCovariateSettings(
+  label = "Pre-exposure",
+  includeEraIds = "exposureId",
+  start = -30,
+  end = -1,
+  endAnchor = "era start"
+)
+
+covarExposureOfInt <- SelfControlledCaseSeries::createEraCovariateSettings(
+  label = "Main",
+  includeEraIds = "exposureId",
+  start = 1,
+  startAnchor = "era start",
+  end = 0,
+  endAnchor = "era end",
+  profileLikelihood = TRUE,
+  exposureOfInterest = TRUE
+)
+
+calendarTimeSettings <- SelfControlledCaseSeries::createCalendarTimeCovariateSettings(
+  calendarTimeKnots = 5,
+  allowRegularization = TRUE,
+  computeConfidenceIntervals = FALSE
+)
+
+seasonalitySettings <- SelfControlledCaseSeries::createSeasonalityCovariateSettings(
+  seasonKnots = 5,
+  allowRegularization = TRUE,
+  computeConfidenceIntervals = FALSE
+)
+
+createSccsIntervalDataArgs <- SelfControlledCaseSeries::createCreateSccsIntervalDataArgs(
+  eraCovariateSettings = list(covarPreExp, covarExposureOfInt),
+  seasonalityCovariateSettings = seasonalitySettings,
+  calendarTimeCovariateSettings = calendarTimeSettings,
+  minCasesForTimeCovariates = 100000
+)
+
+fitSccsModelArgs <- SelfControlledCaseSeries::createFitSccsModelArgs(
+  control = Cyclops::createControl(
+    cvType = "auto",
+    selectorType = "byPid",
+    startingVariance = 0.1,
+    seed = 1,
+    resetCoefficients = TRUE,
+    noiseLevel = "quiet"
+  )
+)
+
+sccsAnalysis1 <- SelfControlledCaseSeries::createSccsAnalysis(
+  analysisId = 1,
+  description = "SCCS age 18-",
+  getDbSccsDataArgs = getDbSccsDataArgs,
+  createStudyPopulationArgs = createStudyPopulation6AndOlderArgs,
+  createIntervalDataArgs = createSccsIntervalDataArgs,
+  fitSccsModelArgs = fitSccsModelArgs
+)
+
+sccsAnalysisList <- list(sccsAnalysis1)
+
+# SCCS module specs ------------------------------------------------------------
+sccsModuleSpecifications <- creatSelfControlledCaseSeriesModuleSpecifications(
+  sccsAnalysisList = sccsAnalysisList,
+  exposuresOutcomeList = exposuresOutcomeList,
+  combineDataFetchAcrossOutcomes = FALSE
+)
+```
+
+## PatientLevelPrediction Module Settings
+
+The following code creates the `plpModuleSpecifications` to perform a self-controlled case series analysis for this study.
+
+```{r eval=FALSE}
+source("https://raw.githubusercontent.com/OHDSI/PatientLevelPredictionModule/v0.0.1/SettingsFunctions.R")
+
+makeModelDesignSettings <- function(targetId, outcomeId, popSettings, covarSettings) {
+  invisible(  PatientLevelPrediction::createModelDesign(
+    targetId = targetId, 
+    outcomeId = outcomeId, 
+    restrictPlpDataSettings = PatientLevelPrediction::createRestrictPlpDataSettings(), 
+    populationSettings = popSettings, 
+    covariateSettings = covarSettings, 
+    preprocessSettings = PatientLevelPrediction::createPreprocessSettings(), 
+    modelSettings = PatientLevelPrediction::setLassoLogisticRegression(), 
+    splitSettings = PatientLevelPrediction::createDefaultSplitSetting(), 
+    runCovariateSummary = T
+  ))
+}
+
+plpPopulationSettings <- PatientLevelPrediction::createStudyPopulationSettings(
+  startAnchor = "cohort start",
+  riskWindowStart = 1,
+  endAnchor = "cohort start",
+  riskWindowEnd = 365,
+  minTimeAtRisk = 1
+)
+plpCovarSettings <- FeatureExtraction::createDefaultCovariateSettings()
+
+modelDesignList <- list()
+for (i in 1:length(exposureOfInterestIds)) {
+  for (j in 1:length(outcomeOfInterestIds)) {
+    modelDesignList <- append(
+      modelDesignList,
+      list(
+          makeModelDesignSettings(
+          targetId = exposureOfInterestIds[i],
+          outcomeId = outcomeOfInterestIds[j],
+          popSettings = plpPopulationSettings,
+          covarSettings = plpCovarSettings
+        )
+      )
+    )
+  }
+}
+
+plpModuleSpecifications <- createPatientLevelPredictionModuleSpecifications(modelDesignList = modelDesignList)
+```
+
 # Strategus Analysis Specifications
 
 Finally, we will use the various shared resources and module specifications to construct the full set of analysis specifications and save it to the file system in JSON format.
@@ -265,7 +462,10 @@ analysisSpecifications <- createEmptyAnalysisSpecificiations() %>%
   addModuleSpecifications(cohortGeneratorModuleSpecifications) %>%
   addModuleSpecifications(cohortDiagnosticsModuleSpecifications) %>%
   addModuleSpecifications(cohortIncidenceModuleSpecifications) %>%
-  addModuleSpecifications(cohortMethodModuleSpecifications)
+  addModuleSpecifications(characterizationModuleSpecifications) %>%
+  addModuleSpecifications(cohortMethodModuleSpecifications) %>%
+  addModuleSpecifications(sccsModuleSpecifications) %>%
+  addModuleSpecifications(plpModuleSpecifications)
 
 ParallelLogger::saveSettingsToJson(analysisSpecifications, file.path(params$analysisSettingsPath, params$analysisSettingsFileName))
 ```
