--- a/vignettes/CreatingAnalysisSpecification.Rmd
+++ b/vignettes/CreatingAnalysisSpecification.Rmd
@@ -78,7 +78,7 @@ The building blocks of the `Strategus` analysis specification are HADES modules.
 The following code downloads the settings functions from the `CohortGeneratorModule` which then activates some additional functions we can use for creating the analysis specification. In the analysis specification, we will add the cohort definitions and negative control outcomes to the `sharedResources` section since these elements may be used by any of the HADES modules. To do this, we will use the `createCohortSharedResourceSpecifications` and `createNegativeControlOutcomeCohortSharedResourceSpecifications` functions respectively. In addition, we will use the  `cohortGeneratorModuleSpecifications` function to specify the cohort generation settings.
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/CohortGeneratorModule/v0.0.14/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CohortGeneratorModule/v0.0.16/SettingsFunctions.R")
 
 # Create the cohort definition shared resource element for the analysis specification
 cohortDefinitionSharedResource <- createCohortSharedResourceSpecifications(
@@ -102,7 +102,7 @@ cohortGeneratorModuleSpecifications <- createCohortGeneratorModuleSpecifications
 The following code creates the `cohortDiagnosticsModuleSpecifications` to run cohort diagnostics on the cohorts in the study.
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/CohortDiagnosticsModule/v0.0.6/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CohortDiagnosticsModule/v0.0.7/SettingsFunctions.R")
 cohortDiagnosticsModuleSpecifications <- createCohortDiagnosticsModuleSpecifications(
   runInclusionStatistics = TRUE,
   runIncludedSourceConcepts = TRUE,
@@ -121,7 +121,7 @@ cohortDiagnosticsModuleSpecifications <- createCohortDiagnosticsModuleSpecificat
 The following code creates the `cohortIncidenceModuleSpecifications` to perform an incidence rate analysis for the target cohorts and outcome in this study.
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/CohortIncidenceModule/v0.0.5/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CohortIncidenceModule/v0.0.6/SettingsFunctions.R")
 library(CohortIncidence)
 targets <- list(createCohortRef(id=1, name="Celecoxib"),
                 createCohortRef(id=2, name="Diclofenac"),
@@ -158,32 +158,17 @@ The following code creates the `characterizationModuleSpecifications` to perform
 
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/CharacterizationModule/v0.0.1/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CharacterizationModule/v0.2.3/SettingsFunctions.R")
 characterizationModuleSpecifications <- createCharacterizationModuleSpecifications(targetIds = c(1,2),
                                                                                    outcomeIds = 3,
-                                                                                   covariateSettings =
-                                                                                     FeatureExtraction::createCovariateSettings(
-                                                                                       useDemographicsAge = T,
-                                                                                       useDemographicsAgeGroup = T,
-                                                                                       useDemographicsGender = T,
-                                                                                       useDemographicsRace = T,
-                                                                                       useDemographicsEthnicity = T,
-                                                                                       useDemographicsIndexYear = T,
-                                                                                       useDemographicsIndexMonth = T,
-                                                                                       useDemographicsPriorObservationTime = T,
-                                                                                       useDemographicsPostObservationTime = T,
-                                                                                       useDemographicsTimeInCohort = T,
-                                                                                       useConditionGroupEraLongTerm  = T,
-                                                                                       useDrugGroupEraLongTerm = T,
-                                                                                       useProcedureOccurrenceLongTerm = T,
-                                                                                       longTermStartDays = -365,
-                                                                                       endDays = 0),
+                                                                                   covariateSettings = FeatureExtraction::createDefaultCovariateSettings(),
                                                                                    dechallengeStopInterval = 30,
                                                                                    dechallengeEvaluationWindow = 30,
-                                                                                   riskWindowStart = 1,
-                                                                                   startAnchor = "cohort start",
-                                                                                   riskWindowEnd = 0,
-                                                                                   endAnchor = "cohort end")
+                                                                                   timeAtRisk = data.frame(
+                                                                                     riskWindowStart = c(1,1),
+                                                                                     startAnchor = c("cohort start","cohort start"),
+                                                                                     riskWindowEnd = c(0,365),
+                                                                                     endAnchor = c("cohort end","cohort end")))
 ```
 
 
@@ -193,7 +178,7 @@ The following code creates the `cohortMethodModuleSpecifications` to perform a c
 
 ```{r eval=FALSE}
 library(CohortMethod)
-source("https://raw.githubusercontent.com/OHDSI/CohortMethodModule/v0.0.4/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/CohortMethodModule/v0.0.6/SettingsFunctions.R")
 negativeControlOutcomes <- lapply(
   X = ncoCohortSet$cohortId,
   FUN = createOutcome,
@@ -295,7 +280,7 @@ The following code creates the `cohortMethodModuleSpecifications` to perform a c
 
 ```{r eval=FALSE}
 library(SelfControlledCaseSeries)
-source(url = "https://raw.githubusercontent.com/OHDSI/SelfControlledCaseSeriesModule/v0.0.2/SettingsFunctions.R")
+source(url = "https://raw.githubusercontent.com/OHDSI/SelfControlledCaseSeriesModule/v0.0.5/SettingsFunctions.R")
 
 # Exposures-outcomes -----------------------------------------------------------
 negativeControlOutcomeIds <- ncoCohortSet$cohortId
@@ -406,7 +391,7 @@ sccsModuleSpecifications <- creatSelfControlledCaseSeriesModuleSpecifications(
 The following code creates the `plpModuleSpecifications` to perform a self-controlled case series analysis for this study.
 
 ```{r eval=FALSE}
-source("https://raw.githubusercontent.com/OHDSI/PatientLevelPredictionModule/v0.0.1/SettingsFunctions.R")
+source("https://raw.githubusercontent.com/OHDSI/PatientLevelPredictionModule/v0.0.6/SettingsFunctions.R")
 
 makeModelDesignSettings <- function(targetId, outcomeId, popSettings, covarSettings) {
   invisible(  PatientLevelPrediction::createModelDesign(
